feat: [Translation] Add translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,1 +1,30 @@
-{}
+{
+  "Settings": "Settings",
+  "GPS is enabled": "GPS is enabled",
+  "GPS is disabled": "GPS is disabled",
+  "Current position": "Current position",
+  "Current latitude": "Latitude: {{latitude}}",
+  "Current longitude": "Longtitude: {{longitude}}",
+  "Please enable": "Please enable",
+  "Office": "Office",
+  "Not set": "Not set",
+  "You": "You",
+  "Arrived": "Arrived",
+  "You are distance": "You are {{roundDistance}} km",
+  "Away from office": "Away from office",
+  "Clock In": "Clock In",
+  "Clock Out": "Clock Out",
+  "Out Of Range": "Out Of Range",
+  "Recent clocking history": "Recent clocking history",
+  "Home": "Home",
+  "Set clockIn range": "Set clockIn range",
+  "Range in KM": "Range in KM",
+  "Range value": "{{clockinRange}} KM",
+  "Set office location": "Set office location",
+  "Latitude": "Latitude",
+  "Longitude": "Longitude",
+  "Save": "Save",
+  "Invalid latitude": "Invalid latitude",
+  "Invalid longitude": "Invalid longitude",
+  "Setting saved": "Setting saved"
+}
