--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -1,1 +1,30 @@
-{}
+{
+  "Settings": "設定",
+  "GPS is enabled": "GPS已啟用",
+  "GPS is disabled": "GPS已停用",
+  "Current position": "目前位置",
+  "Current latitude": "緯度: {{latitude}}",
+  "Current longitude": "經度: {{longitude}}",
+  "Please enable": "請啟用",
+  "Office": "辦公室",
+  "Not set": "尚未設定",
+  "You": "你",
+  "Arrived": "已到達",
+  "You are distance": "距離 {{roundDistance}} 公里",
+  "Away from office": "到達辦公室",
+  "Clock In": "打卡",
+  "Clock Out": "下班",
+  "Out Of Range": "尚未到達",
+  "Recent clocking history": "打卡歷程",
+  "Home": "首頁",
+  "Set clockIn range": "設定打卡範圍",
+  "Range in KM": "距離(公里)",
+  "Range value": "{{clockinRange}} 公里",
+  "Set office location": "辦公室地點",
+  "Latitude": "緯度",
+  "Longitude": "經度",
+  "Save": "儲存",
+  "Invalid latitude": "緯度錯誤",
+  "Invalid longitude": "經度錯誤",
+  "Setting saved": "設定已儲存"
+}
